詳細画面でメモの保存ボタンを実装（新規のみ）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,6 @@
     <string name="title_activity_memo_detail">MemoDetailActivity</string>
     <string name="title">title:</string>
     <string name="large_text">
-        "Material is the metaphor.\n\n"
-
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
+        "Material is the metaphor.\n"
     </string>
 </resources>
