--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="action_delete">Delete</string>
     <string name="title_activity_memo_detail">MemoDetailActivity</string>
     <string name="title">title:</string>
     <string name="large_text">
