--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,11 @@
     <string name="action_delete">Delete</string>
     <string name="title_activity_memo_detail">MemoDetailActivity</string>
     <string name="title">メモのタイトルを入力</string>
+    <string name="import_csv">Import</string>
+    <string name="export_csv">Export</string>
+    <string name="share">Share</string>
+    <string name="send">Send</string>
+    <string name="communicate">Communicate</string>
     <string name="large_text">
         "メモの内容を入力"
     </string>
